@@ -1,0 +1,11 @@
+[Unit]
+Description=PeerGuardian Linux - daily blocklists update
+Documentation=man:pgld(1)
+Documentation=file://@data_root_dir@/doc/pgl/README.blocklists
+
+[Service]
+Type=oneshot
+ExecStart=@BIN_DIR@/pglcmd update
+Nice=19
+IOSchedulingClass=best-effort
+IOSchedulingPriority=7
